--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "rm -rf dist/* && parcel build src/index.html --public-url .",
+    "build": "rimraf dist/* && parcel build src/index.html --public-url .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.6.0",
     "parcel-bundler": "^1.12.4",
+    "rimraf": "^2.7.1",
     "typescript": "^3.7.4",
     "vue-template-compiler": "^2.6.11"
   },
