--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "description": "THE IDOLM@STER CINDERELLA GIRLS Idol list",
   "main": "src/main.ts",
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "rimraf dist/* && parcel build src/index.html --public-url .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.6.0",
-    "parcel-bundler": "^1.12.4",
-    "rimraf": "^2.7.1",
-    "typescript": "^3.7.4",
-    "vue-template-compiler": "^2.6.11"
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.10",
+    "vue-tsc": "^0.30.1"
   },
   "dependencies": {
-    "element-ui": "^2.13.0",
-    "vue": "^2.6.11",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue-router": "^3.1.3"
+    "element-plus": "^1.3.0-beta.1",
+    "vue": "^3.2.26",
+    "vue-router": "^4.0.12"
   }
 }
