--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.1",
-    "@vue/compiler-sfc": "^3.2.26",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.10",
-    "vue-tsc": "^0.30.1"
-  },
   "dependencies": {
-    "element-plus": "^1.3.0-beta.1",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.12"
+    "element-plus": "^2.2.15",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.7",
+    "vite-tsconfig-paths": "^3.5.0",
+    "vue-tsc": "^0.39.5"
   }
 }
