--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,18 +12,16 @@ steps:
     versionSpec: '16.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-  displayName: 'npm install'
-
 - task: DownloadSecureFile@1
   inputs:
     secureFile: '.env.production.local'
   displayName: "Downloading .env.production.local"
 
 - script: |
+    ls -la
+    npm install
     npm run build
-  displayName: 'npm build'
+  displayName: 'npm install and build'
 
 - task: CopyFiles@2
   inputs:
