--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,12 +13,13 @@ steps:
   displayName: 'Install Node.js'
 
 - task: DownloadSecureFile@1
+  name: env
   inputs:
     secureFile: '.env.production.local'
   displayName: "Downloading .env.production.local"
 
 - script: |
-    ls -la
+    cp $(env.secureFilePath) .
     npm install
     npm run build
   displayName: 'npm install and build'
