--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -13,11 +13,17 @@ parserOptions:
 plugins:
   - vue
   - '@typescript-eslint'
+  - import
 rules:
   indent: ['error', 2]
   vue/script-indent: ['error', 2]
   vue/html-indent: ['error', 2]
   no-undef: 'off'
+  sort-imports: 'off'
+  import/order: ['warn', {
+    groups: ['builtin', 'external', 'internal', 'parent', 'sibling', 'index', 'object', 'type'],
+    alphabetize: { order: 'asc' }
+  }]
   vue/multi-word-component-names: 'off'
   vue/max-attributes-per-line: 'off'
   vue/singleline-html-element-content-newline: 'off'
