--- a/package.json
+++ b/package.json
@@ -5,30 +5,31 @@
   "main": "src/main.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build"
   },
   "author": "",
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@tsconfig/node20": "^20.1.2",
-    "element-plus": "^2.5.5",
-    "vue": "^3.4.18",
-    "vue-router": "^4.2.5"
+    "element-plus": "^2.11.3",
+    "vue": "^3.5.21",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.21.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.1",
-    "vite-tsconfig-paths": "^4.3.1",
-    "vue-tsc": "^1.8.27"
+    "@tsconfig/node24": "^24.0.1",
+    "@types/node": "^24.5.2",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.36.0",
+    "jiti": "^2.5.1",
+    "npm-run-all2": "^8.0.4",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7",
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vue-tsc": "^3.0.7"
   }
 }
