--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix --cache",
+    "lint": "run-s lint:*",
+    "format": "prettier --write src/"
   },
   "author": "",
   "license": "MIT",
@@ -19,14 +23,20 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@prettier/plugin-oxc": "^0.1.2",
     "@tsconfig/node24": "^24.0.1",
     "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.36.0",
-    "jiti": "^2.5.1",
+    "eslint-plugin-oxlint": "^1.31.0",
+    "eslint-plugin-vue": "^10.6.2",
+    "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
+    "oxlint": "^1.31.0",
+    "prettier": "^3.7.3",
     "typescript": "^5.9.2",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.2",
